# Squarez-v2

./: .gitignore  Cargo.toml  build.rs  lospec_palettes.txt  untitled.sqr
.opencode/plans/: ramp-lab-bezier-modal.md
.opencode/skills/build-squarez/: SKILL.md
.opencode/skills/commit-before-build/: SKILL.md
Squarez.app/Contents/: Info.plist
Squarez.app/Contents/Resources/: AppIcon.icns
assets/: lospec_palettes.json
docs/superpowers/plans/: 2026-05-19-squarez-implementation.md  2026-05-23-ramp-lab-implementation.md
docs/superpowers/specs/: 2026-05-19-squarez-design.md  2026-05-23-ramp-lab-design.md
graphify-out/: graph.json
scripts/: bundle_macos.sh  macos-bundle.sh  scrape_lospec.py
src/: animation.rs  app.rs  app.rs.bak  canvas.rs  history.rs  layers.rs  lib.rs  main.rs  palette_browser.rs  project.rs  ramp_lab.rs  theme.rs  tile_browser.rs  top_bar.rs  ui_metrics.rs  ui_state.rs  ui_widgets.rs  wang_blob.rs  wang_blob.rs.backup
src/color/: hsv.rs  mod.rs  oklab.rs
src/io/: export.rs  mod.rs  sqr.rs  v2.rs
src/tools/: eyedropper.rs  fill.rs  mod.rs  pencil.rs  select.rs  shapes.rs
tests/: canvas_tests.rs  color_tests.rs  history_tests.rs  io_tests.rs  project_tests.rs  ramp_lab_tests.rs  tools_tests.rs  top_bar_tests.rs  ui_metrics_tests.rs  ui_state_tests.rs
